# Cortex

./: .gitignore  .vercelignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  agent.py  brain.py  config.py  main.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
api/: telegram.js
public/: app.js  index.html  styles.css
scripts/: README.md  commit_five_tools.ps1  commit_five_tools.sh
tests/: test_tool_loading.py
tools/: __init__.py  api_caller.py  archive_tool.py  ascii_table_tool.py  base32_tool.py  base58_tool.py  caesar_cipher_tool.py  calculator.py  case_converter_tool.py  cidr_tool.py  clipboard.py  code_linter.py  code_writer.py  color_converter_tool.py  cron_helper_tool.py  csv_analyzer.py  csv_column_tool.py  csv_deduper_tool.py  csv_to_markdown_tool.py  data_tool.py  datetime_tool.py  diff_tool.py  disk_analyzer.py  dns_lookup.py  duplicate_lines_tool.py  email_sender.py  embedding_search.py  encoding_tool.py  env_file_tool.py  env_setup.py  env_var_checker_tool.py  file_finder_tool.py  file_manager.py  file_stats_tool.py  git_tool.py  hash_tool.py  html_link_extractor_tool.py  html_strip_tool.py  http_status_tool.py  image_tool.py  (+55 more)
