[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "cortex-agent"
version = "0.1.0"
description = "An extensible terminal-based AI agent powered by Groq."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Ayush" }]
dependencies = [
    "groq>=0.4.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
tools = [
    "Pillow>=10.0.0",
    "psutil>=5.9.0",
]
dev = [
    "pytest>=8.0.0",
    "pyflakes>=3.2.0",
]

[project.urls]
Homepage = "https://github.com/Ayush442842q/Cortex"
Repository = "https://github.com/Ayush442842q/Cortex"
Issues = "https://github.com/Ayush442842q/Cortex/issues"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.setuptools]
py-modules = ["agent", "brain", "config", "main"]
packages = ["tools"]
